Commit 17 Pre-Solarlint